--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 		<div class="container">
 			<div class="header-main">
 				<h1 class="logo"><a href="#" aria-label="위로">wirrrro</a></h1>
-				<!-- <nav class="nav" id="nav">
+				<nav class="nav" id="nav">
 					<ul>
-						<li><a href="#sec01">A</a></li>
-						<li><a href="#sec02">B</a></li>
-						<li><a href="#sec03">C</a></li>
-						<li><a href="#sec04">D</a></li>
-						<li><a href="#sec05" class="contact">Resume</a></li>
+						<li><a href="javscript:;">portfolio menu</a></li>
+						<li><a href="https://flowerkong3.github.io/ooc/">ooc</a></li>
+						<li><a href="https://www.innisfree.com/id/en/main/index.do">innisfree global brand</a></li>
+						<li><a href="https://flowerkong3.github.io/yourname/">your name?</a></li>
+						<li><a href="https://flowerkong3.github.io/wirrrro/">portfolio v2</a></li>
+						<li><a href="https://flowerkong3.github.io/wirrrro/resources/images/%EC%9D%B4%EB%A0%A5%EC%84%9C_%EA%B9%80%EB%AF%BC%EC%98%81.pdf" download="" class="resume">Resume</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -50,7 +51,7 @@
 				<span></span>
 				<span></span>
 				<span></span>
-			</button> -->
+			</button>
 		</div>
 	</header>
 
@@ -68,7 +69,7 @@
 					</h2>
 					<p class="txt txt-type01">
 						<span>I design and coding</span>
-						<sp>wirrrro, portfolio, web publisher</sp<img class="light" src="https://www.freeiconspng.com/uploads/fourth-light-png-24.png"  alt="" />an>
+						<span>wirrrro, portfolio, web publisher</sp<img class="light" src="https://www.freeiconspng.com/uploads/fourth-light-png-24.png"  alt="" /><span>
 					</p>
 				</div>
 			</div>
@@ -246,7 +247,7 @@
 						<span>Click My Resume</span>
 					</h2>
 				</div>
-				<a href="resources/images/이력서_김민영.pdf" download="" class="resume">download</a>
+				<a href="https://flowerkong3.github.io/wirrrro/resources/images/%EC%9D%B4%EB%A0%A5%EC%84%9C_%EA%B9%80%EB%AF%BC%EC%98%81.pdf" download="" class="resume">download</a>
 
 	
 				<div class="drag-slide-wrap" style="display:none">
